# LanguageLearning

./: .gitignore  README.md
Exercism/bash/two-fer/: two_fer.sh
Exercism/cpp/binary/: CMakeCache.txt  HELP.md  Makefile  README.md  binary.cpp  binary.h  binary_test.cpp  cmake_install.cmake
Exercism/cpp/collatz-conjecture/: HELP.md  README.md  collatz_conjecture.cpp  collatz_conjecture.h  collatz_conjecture_test.cpp
Exercism/cpp/difference-of-squares/: HELP.md  README.md  difference_of_squares.cpp  difference_of_squares.h  difference_of_squares_test.cpp
Exercism/cpp/grade-school/: HELP.md  README.md  grade_school.cpp  grade_school.h  grade_school_test.cpp
Exercism/cpp/grains/: HELP.md  grains.cpp  grains.h  grains_test.cpp
Exercism/cpp/hamming/: HELP.md  README.md  hamming.cpp  hamming.h  hamming_test.cpp
Exercism/cpp/nth-prime/: HELP.md  README.md  nth_prime.cpp  nth_prime.h  nth_prime_test.cpp
Exercism/cpp/nucleotide-count/: HELP.md  README.md  nucleotide_count.cpp  (+2 more)
OpenGL/Camera/: Camera.h  Camera.sln  Camera.vcxproj  Camera.vcxproj.filters  default.vert  main.cpp
OpenGL/Indicies/: Indicies.sln  Indicies.vcxproj  Indicies.vcxproj.filters  main.cpp
OpenGL/Lighting/: Lighting.sln  Lighting.vcxproj  Lighting.vcxproj.filters  main.cpp
OpenGL/OpenGL/: OpenGL.vcxproj  Window OpenGL.sln  main.cpp
OpenGL/OpenGL1 test/: OpenGL1 test.sln  OpenGL1 test.vcxproj  OpenGL1 test.vcxproj.filters  main.cpp
OpenGL/OpenGLYTTutorial/: OpenGLYTTutorial.sln
OpenGL/Shaders/: Shaders.sln  Shaders.vcxproj  Shaders.vcxproj.filters  default.vert  main.cpp
OpenGL/Specular Maps/: Specular Maps.sln  Specular Maps.vcxproj
OpenGL/Textures/: Texture.cpp  Textures.sln  Textures.vcxproj  Textures.vcxproj.filters  default.frag  default.vert  main.cpp
OpenGL/To3D/: To3D.sln  To3D.vcxproj  To3D.vcxproj.filters  default.vert  glad.c  main.cpp
OpenGL/Triangle/: Triangle.sln  Triangle.vcxproj  main.cpp
OpenGL/Types of Light/: Types of Light.sln  Types of Light.vcxproj  Types of Light.vcxproj.filters  default.frag  main.cpp
OpenGL/libraries/: OpenGL.1.0.0.nupkg
OpenGL/modifications/: Camera.cpp  VAO.h  main.cpp  modifications.sln  modifications.vcxproj  modifications.vcxproj.filters
Shaders4Gaming/DemoBuild/: DemoBuild.sln
Shaders4Gaming/ShaderTraining/: ShaderTraining.sln
bash/: exercise2.sh  exercise3.sh
cpp/: ttt.cpp  ttt_functions.cpp  ttt_functions.hpp
rust/: .gitignore
rust/Chess/: Cargo.toml
rust/Chess/src/: board.rs  main.rs  pieces.rs
rust/WGPU/: Cargo.toml
rust/WGPU/depth_buffer/: Cargo.toml
rust/WGPU/depth_buffer/src/: main.rs  shader.wgsl
rust/WGPU/window/: Cargo.toml
rust/WGPU/window/src/: main.rs
rust/Webserver/: Cargo.toml
rust/collections/: Cargo.toml
rust/control_flow/: Cargo.toml
rust/enums/: Cargo.toml
rust/errors/: Cargo.toml
rust/generic/: Cargo.toml
rust/guess_game/: Cargo.toml
rust/hello_cargo/: Cargo.toml
rust/management/: Cargo.toml
rust/minesweeper/: Cargo.toml  index.html
rust/minesweeper/board_plugin/: Cargo.toml
rust/minesweeper/board_plugin/src/: bounds.rs  events.rs  lib.rs
rust/minesweeper/board_plugin/src/components/: bomb.rs  bomb_neighbor.rs  coordinates.rs  mod.rs  uncover.rs
rust/minesweeper/board_plugin/src/resources/: board.rs  board_assets.rs  board_options.rs  mod.rs  tile.rs  tile_map.rs
rust/minesweeper/board_plugin/src/systems/: input.rs  mark.rs  mod.rs  uncover.rs
rust/minesweeper/public/: minesweeper.d.ts  minesweeper.js  minesweeper_bg.wasm.d.ts
rust/minesweeper/src/: lib.rs  main.rs
rust/minigrep/: Cargo.toml
rust/ownership/: Cargo.toml
rust/snake/: Cargo.toml
rust/snake/src/: main.rs
rust/structs/: Cargo.toml
rust/variables/: Cargo.toml
(+269 files in other folders)
