[package]
name = "Chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
debug = ["bevy-inspector-egui"]

[dependencies]
bevy = "0.8"
# Hierarchy inspector debug
bevy-inspector-egui = { version = "0.12.1", optional = true }